[gd_scene load_steps=46 format=3 uid="uid://0k2tftvihymg"]

[ext_resource type="Script" path="res://boss.gd" id="1_l4evr"]
[ext_resource type="Texture2D" uid="uid://cp5iw66jxhg1x" path="res://Character/NightBorne.png" id="1_os4mp"]
[ext_resource type="Script" path="res://Damageable.gd" id="3_3g8hk"]
[ext_resource type="Script" path="res://CharacterStateMachine.gd" id="4_vf3sr"]
[ext_resource type="Script" path="res://GroundBoss.gd" id="5_j8c8a"]
[ext_resource type="Script" path="res://StateDebugLabel.gd" id="6_k22cv"]
[ext_resource type="Script" path="res://SideBoss.gd" id="6_ss0la"]
[ext_resource type="Script" path="res://CenterBoss.gd" id="7_war8j"]
[ext_resource type="Script" path="res://SideAreaDetect.gd" id="7_xijop"]
[ext_resource type="Script" path="res://BossDead.gd" id="8_u6eow"]
[ext_resource type="Script" path="res://BossHit.gd" id="9_a77cp"]
[ext_resource type="Script" path="res://CenterAreaDetect.gd" id="10_e8x74"]
[ext_resource type="Script" path="res://SideAreaAttack.gd" id="12_kguqf"]
[ext_resource type="Script" path="res://CenterAreaAttack.gd" id="13_3g1ks"]
[ext_resource type="Script" path="res://BossSideCollision.gd" id="13_umgcy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pwmth"]
radius = 26.0
height = 66.0

[sub_resource type="Animation" id="Animation_m4d15"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 0)]
}

[sub_resource type="Animation" id="Animation_j5eer"]
resource_name = "center_attack"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_os4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterAreaAttack:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.1, 1.3, 1.6, 1.8, 2.1, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_0p6gk"]
resource_name = "dead"
length = 2.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_os4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(12, 4), Vector2i(13, 4), Vector2i(14, 4), Vector2i(15, 4), Vector2i(16, 4), Vector2i(17, 4), Vector2i(18, 4), Vector2i(19, 4), Vector2i(20, 4), Vector2i(21, 4)]
}

[sub_resource type="Animation" id="Animation_5ybxe"]
resource_name = "idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_os4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_dxpqn"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_os4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_e826v"]
resource_name = "side_attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_os4mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [23]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(0, 2), Vector2i(1, 2), Vector2i(0, 2), Vector2i(11, 2), Vector2i(0, 2), Vector2i(11, 2), Vector2i(0, 2), Vector2i(11, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SideAreaAttack:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8, 0.9, 1.1, 1.2, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true, false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eglwd"]
_data = {
"RESET": SubResource("Animation_m4d15"),
"center_attack": SubResource("Animation_j5eer"),
"dead": SubResource("Animation_0p6gk"),
"idle": SubResource("Animation_5ybxe"),
"run": SubResource("Animation_dxpqn"),
"side_attack": SubResource("Animation_e826v")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4tnus"]
animation = &"center_attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_22e42"]
animation = &"dead"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qh5jn"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yh3op"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1lmkt"]
animation = &"run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_valab"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qh5jn")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_yh3op")
blend_point_1/pos = 0.0
blend_point_2/node = SubResource("AnimationNodeAnimation_1lmkt")
blend_point_2/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v3v67"]
animation = &"side_attack"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nq68o"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ycveq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4o2vu"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pvwnx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bdj0p"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cj32v"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j5os2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l2dvx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ary11"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pcwvf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6motp"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_jbttb"]
states/End/position = Vector2(989, 184)
states/Start/position = Vector2(289, 184)
states/center_attack/node = SubResource("AnimationNodeAnimation_4tnus")
states/center_attack/position = Vector2(656, 244)
states/dead/node = SubResource("AnimationNodeAnimation_22e42")
states/dead/position = Vector2(873, 184)
states/move/node = SubResource("AnimationNodeBlendSpace1D_valab")
states/move/position = Vector2(447, 184)
states/side_attack/node = SubResource("AnimationNodeAnimation_v3v67")
states/side_attack/position = Vector2(656, 124)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_nq68o"), "move", "side_attack", SubResource("AnimationNodeStateMachineTransition_ycveq"), "side_attack", "move", SubResource("AnimationNodeStateMachineTransition_4o2vu"), "move", "center_attack", SubResource("AnimationNodeStateMachineTransition_pvwnx"), "center_attack", "move", SubResource("AnimationNodeStateMachineTransition_bdj0p"), "side_attack", "center_attack", SubResource("AnimationNodeStateMachineTransition_cj32v"), "center_attack", "side_attack", SubResource("AnimationNodeStateMachineTransition_j5os2"), "move", "dead", SubResource("AnimationNodeStateMachineTransition_l2dvx"), "side_attack", "dead", SubResource("AnimationNodeStateMachineTransition_ary11"), "center_attack", "dead", SubResource("AnimationNodeStateMachineTransition_pcwvf"), "dead", "End", SubResource("AnimationNodeStateMachineTransition_6motp")]
graph_offset = Vector2(-63, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trkw7"]
size = Vector2(76.5715, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0gcjq"]
size = Vector2(110.286, 122.286)

[sub_resource type="CircleShape2D" id="CircleShape2D_7l3cy"]
radius = 28.5943

[node name="Boss" type="CharacterBody2D" node_paths=PackedStringArray("damageable", "dead_state")]
texture_filter = 1
scale = Vector2(1.75, 1.75)
collision_layer = 4
script = ExtResource("1_l4evr")
damageable = NodePath("Damageable")
dead_state = NodePath("CharacterStateMachine/Dead")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 11)
shape = SubResource("CapsuleShape2D_pwmth")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_os4mp")
hframes = 23
vframes = 5
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eglwd")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eglwd")
}
tree_root = SubResource("AnimationNodeStateMachine_jbttb")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = -1.0

[node name="Damageable" type="Node" parent="."]
script = ExtResource("3_3g8hk")
health = 300.0

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("4_vf3sr")
character = NodePath("..")
current_state = NodePath("Ground")
animation_tree = NodePath("../AnimationTree")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("side_state", "sideareadetect", "centerareadetect", "center_state", "ground_state")]
script = ExtResource("5_j8c8a")
side_state = NodePath("../Side")
sideareadetect = NodePath("../../SideAreaDetect")
centerareadetect = NodePath("../../CenterAreaDetect")
center_state = NodePath("../Center")
ground_state = NodePath(".")

[node name="Side" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state", "centerareadetect", "sideareadetect", "center_state")]
script = ExtResource("6_ss0la")
ground_state = NodePath("../Ground")
centerareadetect = NodePath("../../CenterAreaDetect")
sideareadetect = NodePath("../../SideAreaDetect")
center_state = NodePath("../Center")
can_move = false

[node name="Center" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state", "sideareadetect", "side_state")]
script = ExtResource("7_war8j")
ground_state = NodePath("../Ground")
center_attack_name = "center_attack"
sideareadetect = NodePath("../../SideAreaDetect")
side_state = NodePath("../Side")
can_move = false

[node name="Dead" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("sideareadetect", "centerareadetect")]
script = ExtResource("8_u6eow")
sideareadetect = NodePath("../../SideAreaDetect")
centerareadetect = NodePath("../../CenterAreaDetect")
can_move = false

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("9_a77cp")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
return_state = NodePath("../Ground")

[node name="HitTimer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.2
one_shot = true

[node name="StateDebugLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -8.0
offset_top = -19.0
offset_right = 32.0
offset_bottom = 4.0
scale = Vector2(0.3, 0.3)
script = ExtResource("6_k22cv")
state_machine = NodePath("../CharacterStateMachine")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 15

[node name="Timer" type="Timer" parent="NavigationAgent2D"]
autostart = true

[node name="SideAreaDetect" type="Area2D" parent="." node_paths=PackedStringArray("ground_state")]
collision_layer = 0
collision_mask = 2
script = ExtResource("7_xijop")
ground_state = NodePath("../CharacterStateMachine/Ground")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SideAreaDetect"]
position = Vector2(49.7143, 0)
polygon = PackedVector2Array(-8.57144, 42.2857, 23.4286, 42.2857, 24, -31.4286, -120.571, -30.2857, -120, 42.2857, -87.4286, 42.2857, -86.8571, -22.8571, -9.14287, -22.8571)

[node name="CenterAreaDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("10_e8x74")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterAreaDetect"]
position = Vector2(1.71429, 10.2857)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_trkw7")

[node name="SideAreaAttack" type="Area2D" parent="." node_paths=PackedStringArray("boss", "facing_shape")]
position = Vector2(76, 0)
collision_layer = 0
collision_mask = 2
monitoring = false
script = ExtResource("12_kguqf")
boss = NodePath("..")
facing_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideAreaAttack"]
position = Vector2(-53.4285, -1.14285)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_0gcjq")
debug_color = Color(0.513726, 0.560784, 0.4, 0.419608)
script = ExtResource("13_umgcy")
facing_left_position = Vector2(-107, -1.143)
facing_right_position = Vector2(-53.5, -1.143)

[node name="CenterAreaAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
script = ExtResource("13_3g1ks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CenterAreaAttack"]
position = Vector2(1.14286, 15.4286)
shape = SubResource("CircleShape2D_7l3cy")
debug_color = Color(0.52549, 0.564706, 0.266667, 0.419608)

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Side" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Center" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Dead" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/Hit/HitTimer" to="CharacterStateMachine/Hit" method="_on_hit_timer_timeout"]
[connection signal="timeout" from="NavigationAgent2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="SideAreaDetect" to="SideAreaDetect" method="_on_body_entered"]
[connection signal="body_exited" from="SideAreaDetect" to="SideAreaDetect" method="_on_body_exited"]
[connection signal="body_entered" from="CenterAreaDetect" to="CenterAreaDetect" method="_on_body_entered"]
[connection signal="body_exited" from="CenterAreaDetect" to="CenterAreaDetect" method="_on_body_exited"]
[connection signal="body_entered" from="SideAreaAttack" to="SideAreaAttack" method="_on_body_entered"]
[connection signal="body_entered" from="CenterAreaAttack" to="CenterAreaAttack" method="_on_body_entered"]
